--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ enableRobotsTXT = true
 #disqusShortname = ""
 
 # Google Analytics
-#googleAnalytics = "UA-123-45"
+googleAnalytics = "UA-60736898-9"
 
 [params]
 title = "Ryan Plyler"
