--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: hugo build and deploy
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main  # Set a branch to deploy
+      
 
 jobs:
   deploy:
