--- a/config.toml
+++ b/config.toml
@@ -33,10 +33,10 @@ enable = false  # options: true, false. Enable math support globally, default: f
 use = "katex"  # options: "katex", "mathjax". default is "katex".
 
 ## Social links
-#[[params.socialIcons]]
-#icon = "fa-linkedin"
-#title = "Linkedin"
-#url = "https://de.linkedin.com/"
+[[params.socialIcons]]
+icon = "fa-linkedin"
+title = "Linkedin"
+url = "https://www.linkedin.com/in/ryan-plyler-35a42a55/"
 
 [[params.socialIcons]]
 icon = "fa-github"
@@ -80,3 +80,17 @@ url = "mailto:grplyler@liberty.edu"
   weight = 300
   identifier = "about"
   url = "/about/"
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ""
+    lineAnchors = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = "dracula"
+    tabWidth = 4
